@@ -146,6 +146,7 @@
     <Compile Include="src\GameEngine\Entities\Mobs\Dummy.cs" />
     <Compile Include="src\GameEngine\Entities\Mobs\Mob.cs" />
     <Compile Include="src\GameEngine\Entities\Mobs\MobType.cs" />
+    <Compile Include="src\GameEngine\Entities\Mobs\OtherPlayer.cs" />
     <Compile Include="src\GameEngine\Entities\Mobs\Player.cs" />
     <Compile Include="src\GameEngine\Entities\Particles\Particle.cs" />
     <Compile Include="src\GameEngine\Entities\Projectiles\BasicProjectile.cs" />
@@ -154,6 +155,7 @@
     <Compile Include="src\GameEngine\Entities\Spawners\Spawner.cs" />
     <Compile Include="src\GameEngine\Graphics\AnimatedSprite.cs" />
     <Compile Include="src\GameEngine\Graphics\Screen.cs" />
+    <Compile Include="src\GameEngine\Inputs\ArtificialInput.cs" />
     <Compile Include="src\GameEngine\Inputs\KeyBoard.cs" />
     <Compile Include="src\GameEngine\Inputs\Mouse.cs" />
     <Compile Include="src\GameEngine\Interfaces\IRenderable.cs" />
@@ -171,9 +173,13 @@
     <Compile Include="src\GameEngine\Networking\Client.cs" />
     <Compile Include="src\GameEngine\Networking\Code.cs" />
     <Compile Include="src\GameEngine\Networking\Packets\Acknowledge.cs" />
+    <Compile Include="src\GameEngine\Networking\Packets\AddOtherPlayer.cs" />
     <Compile Include="src\GameEngine\Networking\Packets\Connected.cs" />
     <Compile Include="src\GameEngine\Networking\Packets\Connecting.cs" />
+    <Compile Include="src\GameEngine\Networking\Packets\EntityCorrection.cs" />
+    <Compile Include="src\GameEngine\Networking\Packets\Input.cs" />
     <Compile Include="src\GameEngine\Networking\Packets\LevelGenData.cs" />
+    <Compile Include="src\GameEngine\Networking\Packets\OtherPlayerID.cs" />
     <Compile Include="src\GameEngine\Networking\Packets\Packet.cs" />
     <Compile Include="src\GameEngine\Networking\Packets\Ping.cs" />
     <Compile Include="src\GameEngine\Networking\Packets\Pong.cs" />
